# portulock-keyserver

./: .dockerignore  .gitignore  .gitlab-ci.yml  DEMO.md  Dockerfile  README.md  docker-compose.yml
keyserver-ui/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  vue.config.js
keyserver-ui/public/config/: .gitignore  ui.json.example
keyserver-ui/src/: App.vue  main.js
keyserver-ui/src/components/: Checkmark.vue  DisplayCertificateAuthority.vue  DisplayKeyComponents.vue  ErrorDisplay.vue  TextFileDownloadButton.vue  ZipFileDownloadButton.vue
keyserver-ui/src/plugins/: bootstrap.js  formulate.js  http.js  router.js  vuex.js
keyserver-ui/src/services/: KeyLocator.js  KeyParser.js  ManagementTokenGenerator.js  TrustSigner.js
keyserver-ui/src/styles/: vue-formulate.css
keyserver-ui/src/views/: About.vue  CAList.vue  Generate.vue  Home.vue  Locate.vue  Manage.vue  Upload.vue
openpgp-trustsign-wasm/: Cargo.toml
openpgp-trustsign-wasm/.cargo/: audit.toml
openpgp-trustsign-wasm/src/: lib.rs
portulock-keyserver/: Cargo.toml  rustfmt.toml
portulock-keyserver/.cargo/: audit.toml
portulock-keyserver/aggregator/: Cargo.toml  Rocket.toml.example
portulock-keyserver/aggregator/src/: config.rs  lookup_endpoint.rs  main.rs
portulock-keyserver/aggregator/src/certification/: local.rs  mod.rs
portulock-keyserver/aggregator/src/lookup/: email.rs  handle.rs  keyserver.rs  mod.rs
portulock-keyserver/shared/: Cargo.toml
portulock-keyserver/shared/src/: config.rs  errors.rs  lib.rs  types.rs
portulock-keyserver/shared/src/certification/: mod.rs
portulock-keyserver/shared/src/filtering/: applier.rs  filters.rs  mod.rs
portulock-keyserver/shared/src/lookup/: email.rs  handle.rs  keyserver.rs  mod.rs
portulock-keyserver/shared/src/utils/: armor.rs  async_helper.rs  maps.rs  mod.rs  random.rs  rocket_helpers.rs
portulock-keyserver/verifier/: Cargo.toml  Rocket.toml.example  diesel.toml
portulock-keyserver/verifier/src/: async_helper.rs  error.rs  errors.rs  holders.rs  internal_endpoint.rs  main.rs  management_endpoint.rs  rocket_helpers.rs  submission_endpoint.rs  verification_endpoint.rs
portulock-keyserver/verifier/src/db/: diesel_sqlite.rs  diesel_types.rs  mod.rs  pending.rs  revocations.rs  schema.rs  verified.rs
portulock-keyserver/verifier/src/key_storage/: mod.rs  multi_keystore.rs  openpgp_ca_lib.rs
portulock-keyserver/verifier/src/management/: mod.rs
portulock-keyserver/verifier/src/submission/: internal_submission.rs  mailer.rs  mod.rs
portulock-keyserver/verifier/src/utils_verifier/: expiration.rs
portulock-keyserver/verifier/src/verification/: mod.rs
portulock-keyserver/verifier/src/verification/tokens/: mod.rs  oidc_verification.rs
portulock-keyserver/verifier/templates/: status_page.html.hbs  verify_email.html.hbs  verify_name_code.html.hbs
portulock-keyserver/verifier_lib/: Cargo.toml
portulock-keyserver/verifier_lib/migrations/2021-06-14-151941_create_tables/: down.sql  up.sql
portulock-keyserver/verifier_lib/migrations/2021-10-31-093800_pending_revocations/: down.sql  up.sql
portulock-keyserver/verifier_lib/src/: certs.rs  errors.rs  lib.rs
portulock-keyserver/verifier_lib/src/db/: mod.rs  pending.rs  revocations.rs
portulock-keyserver/verifier_lib/src/db_new/: mod.rs
portulock-keyserver/verifier_lib/src/key_storage/: mod.rs  multi_keystore.rs  openpgp_ca_lib.rs
portulock-keyserver/verifier_lib/src/management/: mod.rs
portulock-keyserver/verifier_lib/src/submission/: internal_submission.rs  mailer.rs  mod.rs
portulock-keyserver/verifier_lib/src/utils_verifier/: mod.rs
portulock-keyserver/verifier_lib/src/verification/: challenges.rs  mod.rs
portulock-keyserver/verifier_lib/src/verification/sso/: mod.rs  oidc_verification.rs  saml_verification.rs
portulock-keyserver/verifier_lib/src/verification/tokens/: mod.rs
reverse-proxy/: combined.conf
