[package]
name = "openpgp-trustsign-wasm"
version = "0.1.0"
authors = ["Erik Escher <erik@erikescher.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
sequoia-openpgp = { git = "https://gitlab.com/sequoia-pgp/sequoia", default-features = false, features = [ "crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
console_error_panic_hook = "0.1.7"
anyhow = "1.0.44"
base64 = "0.13.0"


[profile.release]
opt-level = "s"
