[package]
name = "aggregator"
version = "0.1.0"
authors = ["Erik Escher <erik@erikescher.de>"]
edition = "2018"

[dependencies]
shared = {path="../shared"}
serde = { version="1.0", features= ["derive"]}
rocket = "0.4"
sequoia-openpgp = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1"
sequoia-net = "0.23" # currently GPL, should be LGPL with next release
futures = "0.3"
tokio = { version = "0.2", features = ["full"] } # outdated version in use with sequoia-net
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
async-trait = "0.1.52"
hex = "0.4.3"