[package]
name = "aggregator"
version = "0.1.0"
authors = ["Erik Escher <erik@erikescher.de>"]
edition = "2018"

[dependencies]
shared = {path="../shared"}
serde = { version="1.0", features= ["derive"]}
rocket = "0.5.0-rc.1"
sequoia-openpgp = "1.5" # LGPL
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1"
sequoia-net = "0.24" # LGPL
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
async-trait = "0.1.52"
hex = "0.4.3"