[package]
name = "shared"
version = "0.1.0"
authors = ["Erik Escher <erik@erikescher.de>"]
edition = "2018"

[dependencies]
serde = { version="1.0", features= ["derive"]}
serde_json = "1.0"
rocket = "0.4"
jsonwebtoken = "7"
sequoia-openpgp = "1"
base64 = "0.13"
regex = "1"
lazy_static = "1"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.10", features = ["json"] }
anyhow = "1"
sequoia-net = "0.23" # currently GPL, should be LGPL with next release
futures = "0.3"
tokio = { version = "0.2", features = ["full"] } # outdated version in use with sequoia-net
async-trait = "0.1.50"
lettre = "0.10.0-rc.3"
openidconnect = "2.1.0"
diesel = { version = "1", features = ["sqlite", "mysql", "chrono"]}
rusqlite = "0.25.3" # note: version conflicts with diesel and openpgp-ca-lib via shared dependency on libsqlite3-sys
