[package]
name = "shared"
version = "0.1.0"
authors = ["Erik Escher <erik@erikescher.de>"]
edition = "2018"

[dependencies]
serde = { version="1.0", features= ["derive"]}
serde_json = "1.0"
rocket = "0.4"
jsonwebtoken = "7"
sequoia-openpgp = "1"
reqwest = { version = "0.10", features = ["json"] }
anyhow = "1"
sequoia-net = "0.23" # currently GPL, should be LGPL with next release
tokio = { version = "0.2", features = ["full"] } # outdated version in use with sequoia-net
diesel = { version = "1", features = ["sqlite", "mysql", "chrono"]}
rusqlite = "0.25.3" # note: version conflicts with diesel and openpgp-ca-lib via shared dependency on libsqlite3-sys
tracing = "0.1"