[package]
name = "verifier"
version = "0.1.0"
authors = ["Erik Escher <erik@erikescher.de>"]
edition = "2018"

[dependencies]
shared = {path="../shared"}
verifier_lib = {path = "../verifier_lib"}
serde = { version="1.0", features= ["derive"]}
serde_json = "1.0"
rocket = "0.4"
rocket_contrib = {version="0.4", features=["json", "handlebars_templates", "diesel_sqlite_pool"]}
diesel = { version = "1", features = ["sqlite", "chrono"]}
diesel_migrations = "1"
sequoia-openpgp = "1"
reqwest = { version = "0.10", features = ["blocking", "json"] }
chrono = "0.4"
num-traits = "0.2.14"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
anyhow = "1.0.56"