[package]
name = "verifier"
version = "0.1.0"
authors = ["Erik Escher <erik@erikescher.de>"]
edition = "2018"

[dependencies]
shared = {path="../shared"}
verifier_lib = {path = "../verifier_lib"}
serde = { version="1.0", features= ["derive"]}
serde_json = "1.0"
rocket = { version = "0.5.0-rc.1", features = ["secrets", "json"]}
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_sqlite_pool"]}
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["handlebars"]}
diesel = { version = "1", features = ["sqlite", "chrono"]}
diesel_migrations = "1"
sequoia-openpgp = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = "0.4"
num-traits = "0.2.14"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = "0.3"
anyhow = "1.0.56"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.53"