[package]
name = "verifier_lib"
version = "0.1.0"
authors = ["Erik Escher <erik@erikescher.de>"]
edition = "2018"

[dependencies]
shared = {path="../shared"}
serde = { version="1.0", features= ["derive"]}
serde_json = "1.0"
jsonwebtoken = "7"
sequoia-openpgp = "1.5" # LGPL
sequoia-net = "0.24.0"  # LGPL
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
anyhow = "1"
async-trait = "0.1.50"
chrono = "0.4"
openpgp-ca-lib = "0.10.1" # GPL, TODO: tokio 0.2 -> does not exist yet
lettre = "0.10.0-rc.3"
base64 = "0.13.0"
urlencoding = "2.1.0"
openidconnect = { version = "2.2.0", features = ["accept-rfc3339-timestamps"]}
num-traits = "0.2.14"
rusqlite = "0.25.3" # note: version conflicts with diesel and openpgp-ca-lib via shared dependency on libsqlite3-sys
tracing = { version = "0.1", features = ["log"] }
samael = { version = "0.0.9", features = ["xmlsec"]}
openssl = "0.10.38"